force-app/main/default/objects/PricebookEntry/fields/Bzirk__c.field-meta.xml
<CustomField>
    <fullName>Bzirk__c</fullName>
    <formula>Pricebook2.Bzirk__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bzirk</label>
    <type>Text</type>
</CustomField>