force-app/main/default/objects/PricebookEntry/fields/SAPPrice__c.field-meta.xml
<CustomField>
    <fullName>SAPPrice__c</fullName>
    <description>Price in SAP Price UNit (per MT2 for ceramic bases)</description>
    <label>SAP Price</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>