force-app/main/default/objects/PricebookEntry/fields/SAPPriceUnit__c.field-meta.xml
<CustomField>
    <fullName>SAPPriceUnit__c</fullName>
    <description>UNit of the SAP Price</description>
    <label>SAP Price Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProductUnits</valueSetName>
    </valueSet>
</CustomField>