force-app/main/default/objects/PricebookEntry/fields/UMVPrice__c.field-meta.xml
<CustomField>
    <fullName>UMVPrice__c</fullName>
    <description>Price per Sales UNit (UMV)</description>
    <label>UMV Price</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>