force-app/main/default/objects/PricebookEntry/fields/UMVPriceUnit__c.field-meta.xml
<CustomField>
    <fullName>UMVPriceUnit__c</fullName>
    <description>Unit of the Price per Sales Unit (so it is the sales unit)</description>
    <label>UMV Price Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProductUnits</valueSetName>
    </valueSet>
</CustomField>