force-app/main/default/objects/PricebookEntry/fields/Uprice__c.field-meta.xml
<CustomField>
    <fullName>Uprice__c</fullName>
    <description>Unit of the price</description>
    <label>Unit of the price</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PZS</fullName>
                <label>Piece</label>
            </value>
            <value>
                <fullName>CV</fullName>
                <label>Box</label>
            </value>
            <value>
                <fullName>PAL</fullName>
                <label>Pallet</label>
            </value>
            <value>
                <fullName>ST</fullName>
                <label>Unit</label>
            </value>
            <value>
                <fullName>SAC</fullName>
                <label>Bag</label>
            </value>
            <value>
                <fullName>MT2</fullName>
                <label>Square meter</label>
            </value>
            <value>
                <fullName>BID</fullName>
                <label>Can</label>
            </value>
            <value>
                <fullName>CJ</fullName>
                <label>Case</label>
            </value>
            <value>
                <fullName>CM</fullName>
                <label>Centimeter</label>
            </value>
            <value>
                <fullName>DM2</fullName>
                <label>Square decimeter</label>
            </value>
            <value>
                <fullName>KG</fullName>
                <label>Kilogram</label>
            </value>
            <value>
                <fullName>L</fullName>
                <label>Liter</label>
            </value>
            <value>
                <fullName>M</fullName>
                <label>Meter</label>
            </value>
            <value>
                <fullName>M2</fullName>
                <label>Square meters</label>
            </value>
            <value>
                <fullName>ML</fullName>
                <label>Mililiter</label>
            </value>
            <value>
                <fullName>ROL</fullName>
                <label>Roll</label>
            </value>
            <value>
                <fullName>SQF</fullName>
                <label>Square foot</label>
            </value>
            <value>
                <fullName>UN</fullName>
                <label>Item</label>
            </value>
            <value>
                <fullName>CM2</fullName>
                <label>Square centimeter</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>